# makepad-d3

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_FINAL.md  DEVELOPMENT_PLAN_V2.md  README.md  makepad-d3-gap-claude.md  treemap-bug-glm.md
benches/: render3d_bench.rs
docs/: 3D_OPTIMIZATION_PLAN.md  AI_MODEL_COMPARISON.md  COMPARISON_SUMMARY.md  GPU_3D_RENDERING_ARCHITECTURE.md  MAKEPAD_STACK_OVERFLOW_ISSUE.md  SPLASH_INTEGRATION_DESIGN.md  d3-splash.md
examples/chart_zoo/src/: main.rs
examples/chart_zoo/src/charts/: apollonius_problem.rs  bar3d_chart.rs  color_interpolation.rs  draw_primitives.rs  mod.rs  packed_bubble_chart.rs  scatter3d_chart.rs  surface_plot.rs  treemap_chart.rs  voronoi_stippling.rs
examples/splash_demo/src/: main.rs
src/: error.rs  lib.rs
src/axis/: axis.rs  format.rs  grid.rs  mod.rs  tick.rs
src/color/: blend.rs  cubehelix.rs  hcl.rs  interpolate.rs  lab.rs  mod.rs  oklab.rs  scale.rs
src/component/: annotation.rs  crosshair.rs  legend.rs  mod.rs  reference_line.rs  tooltip.rs
src/data/: chart_data.rs  dataset.rs  mod.rs  observable.rs  pipeline.rs  point.rs  polling.rs  source.rs  streaming.rs
src/geo/: area.rs  geojson.rs  mod.rs  path.rs  projection.rs
src/interaction/: brush.rs  mod.rs  tooltip.rs  zoom.rs
src/layout/: delaunay.rs  mod.rs
src/layout/force/: forces.rs  mod.rs  simulation.rs
src/layout/hierarchy/: mod.rs  node.rs  pack.rs  partition.rs  tree.rs  treemap.rs
src/render3d/: bar3d.rs  camera.rs  colormap.rs  draw.rs  geometry.rs  mesh.rs  mod.rs  scatter.rs  surface.rs  types.rs
src/scale/: band.rs  category.rs  linear.rs  log.rs  mod.rs  point.rs  pow.rs  quantile.rs  quantize.rs  sequential.rs  symlog.rs  threshold.rs  time.rs  traits.rs
src/shape/: arc.rs  area.rs  line.rs  mod.rs  pie.rs  stack.rs
src/shape/curve/: basis.rs  cardinal.rs  catmull_rom.rs  linear.rs  mod.rs  monotone.rs  natural.rs  step.rs
src/splash/: charts.rs  charts_3d.rs  charts_flow.rs  charts_hier.rs  charts_net.rs  charts_stat.rs  host.rs  mod.rs  vm_data.rs
