[package]
name = "makepad-d3"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "D3.js-compatible data visualization library for Makepad"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/makepad-d3"
keywords = ["visualization", "charts", "d3", "makepad", "gpu"]
categories = ["visualization", "gui", "graphics"]

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "7a5069495ae9f795da74795d9b4a04ee82fc6212" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = []
full = []

[[bench]]
name = "scale_bench"
harness = false

[[bench]]
name = "render3d_bench"
harness = false

[[example]]
name = "chart_zoo"
path = "examples/chart_zoo/src/main.rs"

[profile.release]
lto = true
codegen-units = 1
